@@ -341,15 +341,6 @@ typedef int (*sipVariableSetterFunc)(void *, PyObject *, PyObject *);
 
 
 /*
- * The exception that is raised by virtual handlers when a Python exception has
- * been raised.
- */
-#if defined(__cplusplus)
-struct SIPPyException {};
-#endif
-
-
-/*
  * The meta-type of a wrapper type.
  */
 typedef struct _sipWrapperType {
