@@ -1,7 +1,8 @@
 v4.14 ???
   - Added the %InstanceCode directive.
-  - Added the all_throw_cpp_exception argument to the %Module directive.
-  - Added the /NoThrowsCppException/ and /ThrowsCppException/ function
+  - Added the all_use_VirtualErrorCode argument and %VirtualErrorCode
+    sub-directive to the %Module directive.
+  - Added the /NoUsesVirtualErrorCode/ and /UsesVirtualErrorCode/ function
     annotations.
   - Deprecated sipTransferBreak().
   - For Python v2.x unsigned short and unsigned char (when used as a byte) are
